- new functions in DGeom
- Quickstep refactored and sped up
- Clean-up of demos
- New TrackDemo
- Bug fixes

=============
TODO 
- include DMatrix, DRoation, DMisc into OdeMath i.o. internal Rotation/Matrix?!
- DemoCrash: dofast = true;
=============

2012-May-29 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed NPE in Step.java (e.g. DemoChain1)

2012-May-26 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed Step.java, all test work now, except one.
		  - Fixed QuickStep, much more stable now.
		  - Fixed some warnings

2012-May-18 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Initial version of migrated Step.java, still buggy
		  - Finished migration of all other files.

2012-May-17 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migration of remaining core files until ode.cpp.

2012-May-13 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Test harnesses. Don't run yet...
		  - Fixed and cleaned up concurrency test and fixed modest reported problems
		  - Removed Testing.java

2012-May-08 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Included DMatrix/DRotation/DMisc in OdeMath.
		  - Checked drawstuff

2012-May-07 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated APIs for DMatrix, DMisc and DRotation
		  - Migrated remaining demos
		  - Started migration of DrawStuff.
		  - Fixed some bugs in new Matrix multiplication.

2012-Apr-22 Tilmann Zaschke
		* Migration to ode-0.12:
		  - collision_kernel.*
		  - Fixed QuickStep/DemoBoxStack
		  - Demos up to demo_moving_convex

2012-Apr-14 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated matrix.cpp, fast*.c, objects.h, util.*, ode.cpp.

2012-Apr-13 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated QuickStep, LCP and parts of Matrix.

2012-Apr-10 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed all joint-files.

2012-Apr-09 Tilmann Zaschke
		* Migration to ode-0.12:
		  - 'finnished' include-files for now
		  - migrated DxBox and quickstep.
		  TODO Box is faulty!!!! 
		  